# signal

./: .gitignore  .travis.yml  LICENSE  README.md  Test.hs  signal.cabal
src/System/: Signal.hs
test/: Main.hs
