name:                signal
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Piotr Mlodawski
maintainer:          remdezx+github@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    exposed-modules:     System.Signal
    -- other-modules:
    -- other-extensions:
    build-depends:       base >=4.7 && <4.8

executable test
    build-depends:       base >=4.7 && <4.8,
                         signal
    main-is: Test.hs
